package cl.ucn.disc.pa.cl.ucn.disc.pa.inventario.services;

import cl.ucn.disc.pa.cl.ucn.disc.pa.inventario.services.inventario;

public class inventarioImpl implements inventario {

    public interface inventario{}
}
