package cl.ucn.disc.pa.cl.ucn.disc.pa.inventario.utils;

public class ListaInstrumentos {
}
